src/parser/snapshots/lakonik__parser__parser__tests__parse_statement_snapshot@john_run.snap
---
source: src/parser/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 8
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 8
  name: john
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 5
    end:
      line: 1
      offset: 8
  name: run
parts: []
