src/parser/snapshots/lakonik__parser__parser__tests__parse_statement_snapshot@my-name_jump-fast.snap
---
source: src/parser/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 17
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 17
  name: my-name
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 8
    end:
      line: 1
      offset: 17
  name: jump-fast
parts: []
