src/parser/snapshots/lakonik__parser__parser__tests__parse_statement_snapshot@qwen3_create_@hello.txt.snap
---
source: src/parser/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 23
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 23
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 6
    end:
      line: 1
      offset: 23
  name: create
parts:
  - FilePath:
      type: filepath
      range:
        start:
          line: 1
          offset: 13
        end:
          line: 1
          offset: 23
      path: hello.txt
